--- a/es-kibana/docker-compose.yaml
+++ b/es-kibana/docker-compose.yaml
@@ -19,26 +19,30 @@ services:
     networks:
       - elk
 
-  # logstash:
-  #   image: logstash:7.17.4
-  #   container_name: logstash
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime
-  #   #   - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
-  #     - ./log/conf/logstash.conf:/usr/share/logstash/pipeline/logstash.conf #挂载logstash的配置文件
-  #   ports:
-  #     - "5044:5044"
-  #     - "50000:50000/tcp"
-  #     - "50000:50000/udp"
-  #     - "9600:9600"
-  #   environment:
-  #     LS_JAVA_OPTS: -Xms256m -Xmx256m
-  #   links:
-  #     - elasticsearch:es #可以用es这个域名访问elasticsearch服务
-  #   networks:
-  #     - elk
-  #   depends_on:
-  #     - elasticsearch
+  logstash:
+    image: logstash:7.17.4
+    container_name: logstash
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - "./logstash/pipelines.yml:/usr/share/logstash/config/pipelines.yml"
+      - "./logstash/logstash-audit.conf:/usr/share/logstash/pipeline/logstash-audit.conf"
+      - "./logstash/logstash-user-action.conf:/usr/share/logstash/pipeline/logstash-user-action.conf"
+      # - "/home/lihuiwang/authing/log:/var/log/authing-server"
+    ports:
+      - "5044:5044"
+      - "50000:50000/tcp"
+      - "50000:50000/udp"
+      - "9600:9600"
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      TZ: Asia/Shanghai
+      MONITORING_ENABLED: false
+    links:
+      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
 
   kibana:
     image: kibana:7.17.4
