--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,7 @@
 ## redis
 /redis/redis-cluster/**/data/
 /redis/redis-cluster/**/logs/
+/redis/redis-single/**/data/
+/redis/redis-single/**/logs/
+
 
