--- a/mysql/mysql-cluster/docker-compose.yml
+++ b/mysql/mysql-cluster/docker-compose.yml
@@ -8,22 +8,24 @@ services:
       - ./master/data:/var/lib/mysql
       - ./master/my.cnf:/etc/mysql/my.cnf
       - ./master/init/:/docker-entrypoint-initdb.d/
+      - /etc/localtime:/etc/localtime
     ports:
-      - '3306:3306' #“宿主机端口号：容器内端口号”
+      - '13306:3306' #“宿主机端口号：容器内端口号”
     environment:
-      MYSQL_ROOT_PASSWORD: "123456"
+      MYSQL_ROOT_PASSWORD: "rootroot"
       MASTER_SYNC_USER: "sync_admin" #设置脚本中定义的用于同步的账号
-      MASTER_SYNC_PASSWORD: "123456" #设置脚本中定义的用于同步的密码
+      MASTER_SYNC_PASSWORD: "rootroot" #设置脚本中定义的用于同步的密码
       ADMIN_USER: "root" #当前容器用于拥有创建账号功能的数据库账号
-      ADMIN_PASSWORD: "123456"
-      ALLOW_HOST: "10.10.%.%" #允许同步账号的host地址
+      ADMIN_PASSWORD: "rootroot"
+      ALLOW_HOST: "0.0.0.0" #允许同步账号的host地址
       TZ: "Asia/Shanghai" #解决时区问题
     command:
-    -  "--server-id=1"
-    -  "--character-set-server=utf8mb4"
-    -  "--collation-server=utf8mb4_unicode_ci"
-    -  "--log-bin=mysql-bin"
-    -  "--sync_binlog=1"
+      -  "--server-id=1"
+      -  "--default-authentication-plugin=mysql_native_password"
+      -  "--character-set-server=utf8mb4"
+      -  "--collation-server=utf8mb4_unicode_ci"
+      -  "--log-bin=mysql-bin"
+      -  "--sync_binlog=1"
     networks:
       - mysql-cluster
   mysql-slave1:
@@ -31,7 +33,7 @@ services:
     restart: always
     container_name: mysql-slave1
     ports:
-      - '3307:3306'
+      - '13307:3306'
     environment:
       MYSQL_ROOT_PASSWORD: "123456"
       SLAVE_SYNC_USER: "sync_admin" #用于同步的账号，由master创建
@@ -42,8 +44,11 @@ services:
       TZ: "Asia/Shanghai" #设置时区
     command:
       -  "--server-id=2"
+      -  "--default-authentication-plugin=mysql_native_password"
       -  "--character-set-server=utf8mb4"
       -  "--collation-server=utf8mb4_unicode_ci"
+      -  "--log-bin=mysql-bin"
+      -  "--sync_binlog=1"
     networks:
       - mysql-cluster
     depends_on:
@@ -52,12 +57,13 @@ services:
       - ./slave1/data:/var/lib/mysql
       - ./slave1/my.cnf:/etc/mysql/my.cnf
       - ./slave1/init/:/docker-entrypoint-initdb.d/
+      - /etc/localtime:/etc/localtime
   mysql-slave2:
     image: mysql/mysql-server:8.0.27
     restart: always
     container_name: mysql-slave2
     ports:
-      - '3308:3306'
+      - '13308:3306'
     environment:
       MYSQL_ROOT_PASSWORD: "123456"
       SLAVE_SYNC_USER: "sync_admin" #用于同步的账号，由master创建
@@ -67,9 +73,12 @@ services:
       MASTER_HOST: "10.10.10.10" #master地址，开启主从同步需要连接master
       TZ: "Asia/Shanghai" #设置时区
     command:
-      -  "--server-id=2"
+      -  "--server-id=3"
+      -  "--default-authentication-plugin=mysql_native_password"
       -  "--character-set-server=utf8mb4"
       -  "--collation-server=utf8mb4_unicode_ci"
+      -  "--log-bin=mysql-bin"
+      -  "--sync_binlog=1"
     networks:
       - mysql-cluster
     depends_on:
@@ -78,3 +87,9 @@ services:
       - ./slave2/data:/var/lib/mysql
       - ./slave2/my.cnf:/etc/mysql/my.cnf
       - ./slave2/init/:/docker-entrypoint-initdb.d/
+      - /etc/localtime:/etc/localtime
+networks:
+  mysql-cluster:
+    name: mysql-cluster
+    driver: bridge
+
