--- a/mysql/mysql-cluster/master/my.cnf
+++ b/mysql/mysql-cluster/master/my.cnf
@@ -1,12 +1,13 @@
 [mysqld]
+## server_id，一般设置为IP，注意要唯一
 server_id =  1
 
-# 开启GTID模式
-gtid-mode  =  ON
-enforce-gtid-consistency    =   1
+## 需要主从复制的数据库
+# binlog-do-db=test
 
 # 复制过滤：也就是指定哪个数据库不用同步（mysql库一般不同步）
 binlog-ignore-db    =   mysql
+
 # 开启二进制日志功能，可以随便取，最好有含义（关键就是这里了）
 log-bin             =   mysql-bin
 # 为每个session 分配的内存，在事务过程中用来存储二进制日志的缓存
