--- a/pgsql/docker-compose.yml
+++ b/pgsql/docker-compose.yml
@@ -3,15 +3,17 @@ version: '3.5'
 services:
   postgres:
     container_name: postgres
-    image: postgres:14.5
+    image: postgres:15.1-alpine
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       PGDATA: data/postgres
+      TZ: "Asia/Shanghai"
     volumes:
-      - ./postgres:/data/postgres
+      - ./data:/data/postgres
+
     ports:
-      - "5432:5432"
+      - "15432:5432"
     networks:
       - postgres
     restart: always
