--- a/redis/redis-single/conf/redis.conf
+++ b/redis/redis-single/conf/redis.conf
@@ -155,7 +155,7 @@ slave-serve-stale-data yes
 # 指定Redis最大内存限制，Redis在启动时会把数据加载到内存中，达到最大内存后，Redis会先尝试清除已到期或即将到期的Key，
 # 当此方法处理后，仍然到达最大内存设置，将无法再进行写入操作，但仍然可以进行读取操作。
 # Redis新的vm机制，会把Key存放内存，Value会存放在swap区
-# maxmemory <bytes>
+maxmemory 500mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached? You can select among five behavior:
@@ -178,7 +178,7 @@ slave-serve-stale-data yes
 #
 # The default is:
 #
-# maxmemory-policy volatile-lru
+maxmemory-policy volatile-lru
 
 # LRU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can select as well the sample
@@ -203,7 +203,7 @@ slave-serve-stale-data yes
 appendonly yes
 
 # 指定更新日志文件名，默认为appendonly.aof
-# appendfilename appendonly.aof
+appendfilename appendonly.aof
 
 # The fsync() call tells the Operating System to actually write data on disk
 # instead to wait for more data in the output buffer. Some OS will really flush
@@ -253,9 +253,10 @@ no-appendfsync-on-rewrite no
 #
 # Specify a precentage of zero in order to disable the automatic AOF
 # rewrite feature.
-
+#当前AOF文件大小是上次日志重写得到AOF文件大小的二倍时，自动启动新的日志重写过程。
 auto-aof-rewrite-percentage 100
-auto-aof-rewrite-min-size 64mb
+#当前AOF文件启动新的日志重写过程的最小值，避免刚刚启动Reids时由于文件尺寸较小导致频繁的重写。
+auto-aof-rewrite-min-size 32mb
 
 ################################## SLOW LOG ###################################
 
