--- a/es-logs-kibana/docker-compose.yaml
+++ b/es-logs-kibana/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - ./es/data:/usr/share/elasticsearch/data #数据文件挂载
     ports:
       - "9200:9200"
-      - "9300:9300"
+#      - "9300:9300"  不理解为什么开放 9300
     container_name: elasticsearch
     restart: always
     environment:
@@ -35,11 +35,12 @@ services:
       - "./authing/log:/var/log/authing-server"
     ports:
       - "5044:5044"
-      - "50000:50000/tcp"
-      - "50000:50000/udp"
-      - "9600:9600"
+#       todo logstash 为什么要开放那么多端口，实际上有什么应用
+#      - "50000:50000/tcp"
+#      - "50000:50000/udp"
+#      - "9600:9600"
     environment:
-      LS_JAVA_OPTS: -Xms1024m -Xmx1024m
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
       TZ: Asia/Shanghai
       MONITORING_ENABLED: false
     links:
@@ -59,7 +60,6 @@ services:
     container_name: kibana
     restart: always
     volumes:
-      # - /etc/localtime:/etc/localtime
       - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml
     ports:
       - "5601:5601"
@@ -67,8 +67,8 @@ services:
       - elasticsearch:es #可以用es这个域名访问elasticsearch服务
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200 #设置访问elasticsearch的地址
-      - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
       - I18N_LOCALE=zh-CN
+      - "TZ=Asia/Shanghai"
     networks:
       - elk
     depends_on:
